--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <ol class="toc-list" role="list">
 
     <li>
-        <a href="#Introduction">
-            <span class="title">Introduction</span>
-            <span class="page"><span class="visually-hidden">Page&nbsp;5</span>
+        <a href="#Background">
+            <span class="title">Background</span>
         </a>
         <ol role="list">
 
@@ -310,9 +309,10 @@
     </li>
 </ol>
 
-
-
+<div id="Background">
+  <h1>Background</h1>
     <iframe title="WAAEH Power BI dashboard" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=26888884-3f92-4d63-8c3f-1944c49e15b5&autoAuth=true&ctid=05894af0-cb28-46d8-8716-74cdb46e2226&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWF1c3RyYWxpYS1zb3V0aGVhc3QtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
-    
+</div>
+
   </body>
 </html>
