--- a/blog.html
+++ b/blog.html
@@ -13,25 +13,7 @@
   <div class="header">
     <div class="header_resize">
       <div class="logo">
-        <h1><a href="index.html"><span>jet</span> biz</a><small>Simple web template</small></h1>
-      </div>
-      <div class="search">
-        <form id="form" name="form" method="post" action="#">
-          <span>
-          <input name="q" type="text" class="keywords" id="textfield" maxlength="50" value="Search..." />
-          <input name="b" type="image" src="images/search.gif" class="button" />
-          </span>
-        </form>
-      </div>
-      <div class="clr"></div>
-      <div class="menu_nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="support.html">Support</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li class="active"><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
+        <HEADER HERE>
       </div>
       <div class="clr"></div>
     </div>
@@ -108,51 +90,11 @@
             <li><a href="#">Archives</a></li>
           </ul>
         </div>
-        <div class="gadget">
-          <h2><span>Sponsors</span></h2>
-          <div class="clr"></div>
-          <ul class="ex_menu">
-            <li><a href="#">Lorem ipsum dolor</a><br />
-              Donec libero. Suspendisse bibendum</li>
-            <li><a href="#">Donec mattis</a><br />
-              Phasellus suscipit, leo a pharetra</li>
-            <li><a href="#">Dui pede condimentum</a><br />
-              Tellus eleifend magna eget</li>
-            <li><a href="#">Condimentum lorem</a><br />
-              Curabitur vel urna in tristique</li>
-            <li><a href="#">Fringilla velit magna</a><br />
-              Cras id urna orbi tincidunt orci ac</li>
-            <li><a href="#">Suspendisse bibendum</a><br />
-              purus nec placerat bibendum</li>
-          </ul>
-        </div>
-        <div class="gadget">
-          <h2>Wise Words</h2>
-          <div class="clr"></div>
-          <p> <img src="images/test_1.gif" alt="" width="20" height="18" /> <em>We can let circumstances rule us, or we can take charge and rule our lives from within </em>.<img src="images/test_2.gif" alt="" width="20" height="18" /></p>
-          <p style="float:right;"><strong>Earl Nightingale</strong></p>
-        </div>
       </div>
       <div class="clr"></div>
     </div>
   </div>
-  <div class="fbg">
-    <div class="fbg_resize">
-      <div class="col c1">
-        <h2><span>Image Gallery</span></h2>
-        <a href="#"><img src="images/gallery_1.jpg" width="58" height="58" alt="" /></a> <a href="#"><img src="images/gallery_2.jpg" width="58" height="58" alt="" /></a> <a href="#"><img src="images/gallery_3.jpg" width="58" height="58" alt="" /></a> <a href="#"><img src="images/gallery_4.jpg" width="58" height="58" alt="" /></a> <a href="#"><img src="images/gallery_5.jpg" width="58" height="58" alt="" /></a> <a href="#"><img src="images/gallery_6.jpg" width="58" height="58" alt="" /></a> </div>
-      <div class="col c2">
-        <h2><span>Lorem Ipsum</span></h2>
-        <p>Lorem ipsum dolor<br />
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. <a href="#">Morbi tincidunt, orci ac convallis aliquam</a>, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam.</p>
-      </div>
-      <div class="col c3">
-        <h2><span>Contact</span></h2>
-        <p>Nullam quam lorem, tristique non vestibulum nec, consectetur in risus. Aliquam a quam vel leo gravida gravida eu porttitor dui. Nulla pharetra, mauris vitae interdum dignissim, justo nunc suscipit ipsum. <a href="#">mail@example.com</a><br />
-          <a href="#">+1 (123) 444-5677</a></p>
-      </div>
-      <div class="clr"></div>
-    </div>
+
     <div class="footer">
       <p class="lr">Copyright &copy; <a href="#">Domain Name</a>. All Rights Reserved</p>
       <p class="lf">Design by <a target="_blank" href="http://www.atomicwebsitetemplates.com/">AtomicWebsiteTemplates</a></p>
