--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 <div id="topcontrol" style="position: fixed; bottom: 5px; left: 960px; opacity: 1; cursor: pointer;"></div>
 <div id="header-wrapper">
   <div id="header">
-    <div id="logo"><a href="index.html"><img src="images/logo.png" width="100" height="80" alt=""></a></div>
+    <div id="logo">
+    <HEADER HERE>
+    </div>
     <div id="header-text">
-      <h4>So want to know more about our creative team?</h4>
-      <h6><a href="index.html">Home</a> &rarr; About</h6>
+      <h2>Demo dashboard</h2>
     </div>
   </div>
 </div>
@@ -49,98 +50,98 @@
  <ol class="toc-list" role="list">
               <li>
                 <a href="#Background">
-                  <span class="title">Background</span>
+                  <span class="title"><h4>Background</h4></span>
                 </a>
               </li>
               <li>
                 <a href="#Target-1">
-                  <span class="title">Target 1</span>
+                  <span class="title"><h4>Target 1</h4></span>
                 </a>
               </li>
               <li>
                 <a href="#Target-2">
-                  <span class="title">Target 2</span>
+                  <span class="title"><h4>Target 2</h4></span>
                 </a>
               </li>
               <li>
                 <a href="#Target-3">
-                  <span class="title">Target 3</span>
+                  <span class="title"><h4>Target 3</h4></span>
                 </a>
                 <ol role="list">
                   <li>
                     <a href="#Target-3-Reducing-the-overall-rate-of-homelessness">
-                      <span class="title">Reducing the overall rate of homelessness</span>
+                      <span class="title"><h5>Reducing the overall rate of homelessness</h5></span>
                     </a>
                   </li>
                 </ol>
               </li>
               <li>
                 <a href="#Target-4">
-                  <span class="title">Target 4</span>
+                  <span class="title"><h4>Target 4</h4></span>
                 </a>
                 <ol role="list">
                   <li>
                     <a href="#Target-4-Housing-affordability">
-                      <span class="title">Housing affordability</span>
+                      <span class="title"><h5>Housing affordability</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Housing-supply">
-                      <span class="title">Housing supply</span>
+                      <span class="title"><h5>Housing supply</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Poverty-and-unemployment">
-                      <span class="title">Poverty and unemployment</span>
+                      <span class="title"><h5>Poverty and unemployment</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Young-people-in-custody">
-                      <span class="title">Young people in custody and out of home care</span>
+                      <span class="title"><h5>Young people in custody and out of home care</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Physical-and-mental-health">
-                      <span class="title">Physical and mental health</span>
+                      <span class="title"><h5>Physical and mental health</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Alcohol-and-drug-use">
-                      <span class="title">Alcohol and drug use</span>
+                      <span class="title"><h5>Alcohol and drug use</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-4-Domestic-violence">
-                      <span class="title">Domestic violence</span>
+                      <span class="title"><h5>Domestic violence</h5></span>
                     </a>
                   </li>
                 </ol>
               </li>
               <li>
                 <a href="#Target-5">
-                  <span class="title">Target 5</span>
+                  <span class="title"><h4>Target 5</h4></span>
                 </a>
                 <ol role="list">
                   <li>
                     <a href="#Target-5-Reducing-Aboriginal-homelessness">
-                      <span class="title">Reducing Aboriginal homelessness</span>
+                      <span class="title"><h5>Reducing Aboriginal homelessness</h5></span>
                     </a>
                   </li>
                   <li>
                     <a href="#Target-5-Reducing-regional-homelessness">
-                      <span class="title"Reducing regional homelessness</span>
+                      <span class="title"><h5>Reducing regional homelessness</h5></span>
                     </a>
                   </li>
                 </ol>
               </li>
               <li>
                 <a href="#Target-6">
-                  <span class="title">Target 6</span>
+                  <span class="title"><h4>Target 6</h4></span>
                 </a>
                 <ol role="list">
                   <li>
                     <a href="#Target-6-Addressing-the-needs">
-                      <span class="title">Addressing the needs of those experiencing homelessness</span>
+                      <span class="title"><h5>Addressing the needs of those experiencing homelessness</h5></span>
                     </a>
                   </li>
                 </ol>
