--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <div id="menu-wrapper">
   <div id="main-menu">
     <ul>
- <ol class="toc-list" role="list">
+      <h5>Table of Contents</h5>
+        <div class="spacer"></div>
+           <ol class="toc-list" role="list">
               <li>
                 <a href="#Background">
                   <span class="title"><h5>Background</h5></span>
