--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <ol role="list">
                   <li>
                     <a href="#Target-6-Addressing-the-needs">
-                      <span class="title"><h6>Addressing the needs of those experiencing homelessness</h6></span>
+                      <span class="title"><h6><Addressing the needs of those experiencing homelessness></h6></span>
                     </a>
                   </li>
                 </ol>
