--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <ol role="list">
                   <li>
                     <a href="#Target-6-Addressing-the-needs">
-                      <span class="title"><h6><Addressing the needs of those experiencing homelessness></h6></span>
+                      <span class="title"><h6>Addressing the needs of those experiencing homelessness</h6></span>
                     </a>
                   </li>
                 </ol>
@@ -138,25 +138,6 @@
             </ol>
     </ul>
   </div>
-  <!--This is the START of the footer-->
-  <div id="footer">
-    <div id="social-box">
-      <ul>
-        <li>
-          <div class="facebook"><a href="#"></a></div>
-        </li>
-        <li>
-          <div class="twitter"><a href="#"></a></div>
-        </li>
-        <li>
-          <div class="rss"><a href="#"></a></div>
-        </li>
-      </ul>
-    </div>
-    <h6>Copyright &copy; 2012<br>
-      Design By <a target="_blank" href="http://ninetofive.me/">Zan</a></h6>
-  </div>
-  <!--END of footer-->
 </div>
 <!--END of menu-->
 <!--This is the START of the content-->
