--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <div id="Target-6-Addressing-the-needs">
             <h2>Addressing the needs of those experiencing homelessness</h2>
             </div> 
-            
+            This is a test for the dashboard
             <iframe title="WAAEH Power BI dashboard" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=26888884-3f92-4d63-8c3f-1944c49e15b5&autoAuth=true&ctid=05894af0-cb28-46d8-8716-74cdb46e2226&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLWF1c3RyYWxpYS1zb3V0aGVhc3QtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
 </div>
 <!--END of content-->
