--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
 <!--END of menu-->
 <!--This is the START of the content-->
 <div id="content">
-  <h1>Demo dashboard</h1>
+  <center>
+    <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
+    <br>
+    <h2>Dashboard 2022</h2>
+  </center>
     <div class="spacer"></div>
           <div class="clr"></div>
             <div id="Background">
