--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div id="main-menu">
     <ul>
       <h4>Table of Contents</h4>
-        <div class="spacer"></div>
+        <div class="black-spacer"></div>
            <ol class="toc-list" role="list">
               <li>
                 <a href="#Background">
