--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
     
             <div id="Target-1">
               <h1>Target 1</h1>
+              <blockquote class="blockquote">
+                <h3><i>Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping</i></h3>
+              </blockquote>
             </div>
     
             <div id="Target-2">
