--- a/index.html
+++ b/index.html
@@ -147,6 +147,20 @@
           <div class="clr"></div>
             <div id="Background">
               <h1>Background</h1>
+              <table>
+                <tr>
+                  <td>Placeholder text</td>
+                </tr>
+                <tr>
+                  <td>Placeholder text</td>
+                  <td>Placeholder text</td>
+                </tr>
+                  <tr>
+                  <td>Targets</td>
+                  <td>Targets</td>
+                </tr>
+              </table>
+           
             </div>
     
             <div id="Target-1">
