--- a/index.html
+++ b/index.html
@@ -148,17 +148,21 @@
             <div id="Background">
               <h1>Background</h1>
               <table>
-                <tr>
-                  <td>Placeholder text</td>
-                </tr>
-                <tr>
-                  <td>Placeholder text</td>
-                  <td>Placeholder text</td>
-                </tr>
+                <thead>
+                 <tr>
+                   <th>Ending Homelessness in Western Australia by 2028</th>
+                 </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><h4><i>Responding to Homelessness Targets</i></h4></td>
+                    <td><h4><i>Preventing Homelessness Targets</i></h4></td>
+                  </tr>
                   <tr>
                   <td>Targets</td>
                   <td>Targets</td>
-                </tr>
+                  </tr>
+                </tbody>
               </table>
            
             </div>
