--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <table>
                 <thead>
                  <tr>
-                   <th>Ending Homelessness in Western Australia by 2028</th>
+                   <th><h3>Ending Homelessness in Western Australia by 2028<h3></th>
                  </tr>
                 </thead>
                 <tbody>
