--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <table>
                 <thead>
                  <tr>
-                   <th><h3>Ending Homelessness in Western Australia by 2028<h3></th>
+                   <th><h3><center>Ending Homelessness in Western Australia by 2028</center><h3></th>
                  </tr>
                 </thead>
                 <tbody>
@@ -159,8 +159,8 @@
                     <td><h4><i>Preventing Homelessness Targets</i></h4></td>
                   </tr>
                   <tr>
-                  <td>Targets</td>
-                  <td>Targets</td>
+                    <td><p>Targets</p></td>
+                    <td><p>Targets</p></td>
                   </tr>
                 </tbody>
               </table>
