--- a/index.html
+++ b/index.html
@@ -147,24 +147,25 @@
           <div class="clr"></div>
             <div id="Background">
               <h1>Background</h1>
-              <table>
-                <thead>
-                 <tr>
-                   <th><h3><center>Ending Homelessness in Western Australia by 2028</center><h3></th>
-                 </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><h4><i>Responding to Homelessness Targets</i></h4></td>
-                    <td><h4><i>Preventing Homelessness Targets</i></h4></td>
-                  </tr>
-                  <tr>
-                    <td><p>Targets</p></td>
-                    <td><p>Targets</p></td>
-                  </tr>
-                </tbody>
-              </table>
-           
+              <center>
+                <table>
+                 <thead>
+                   <tr>
+                    <th><h3><center>Ending Homelessness in Western Australia by 2028</center><h3></th>
+                   </tr>
+                 </thead>
+                 <tbody>
+                    <tr>
+                      <td><h4><i>Responding to Homelessness Targets</i></h4></td>
+                      <td><h4><i>Preventing Homelessness Targets</i></h4></td>
+                    </tr>
+                   <tr>
+                     <td><p>Targets</p></td>
+                     <td><p>Targets</p></td>
+                    </tr>
+                   </tbody>
+                 </table>
+              </center>
             </div>
     
             <div id="Target-1">
