--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
               <center>
                 <table>
                  <thead>
-                   <tr>
-                    <th><h3><center>Ending Homelessness in Western Australia by 2028</center><h3></th>
+                   <tr colspan="2">
+                    <th align="center"><h3>Ending Homelessness in Western Australia by 2028<h3></th>
                    </tr>
                  </thead>
                  <tbody>
