--- a/index.html
+++ b/index.html
@@ -147,11 +147,10 @@
           <div class="clr"></div>
             <div id="Background">
               <h1>Background</h1>
-              <center>
-                <table>
+                <table align="center">
                  <thead>
                    <tr>
-                    <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028<h3></th>
+                    <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028</h3></th>
                    </tr>
                  </thead>
                  <tbody>
@@ -165,7 +164,6 @@
                     </tr>
                   </tbody>
                 </table>
-              </center>
             </div>
     
             <div id="Target-1">
