--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
           <div class="clr"></div>
             <div id="Background">
               <h1>Background</h1>
-                <table align="center">
+                <center>
+                <table>
                  <thead>
                    <tr>
                     <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028</h3></th>
@@ -162,8 +163,9 @@
                      <td><p>Targets</p></td>
                      <td><p>Targets</p></td>
                     </tr>
-                  </tbody>
+                 </tbody>
                 </table>
+              </center>
             </div>
     
             <div id="Target-1">
