--- a/testing.html
+++ b/testing.html
@@ -1,4 +1,6 @@
- <table>
+ <link href="css/style.css" rel="stylesheet" type="text/css">
+
+<table>
                  <thead>
                    <tr>
                     <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028</h3></th>
