--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <table>
                  <thead>
                    <tr>
-                    <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028</h3></th>
+                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
                    </tr>
                  </thead>
                  <tbody>
                     <tr>
-                      <td><h4><i>Responding to Homelessness Targets</i></h4></td>
-                      <td><h4><i>Preventing Homelessness Targets</i></h4></td>
+                      <td><i>Responding to Homelessness Targets</i></td>
+                      <td><i>Preventing Homelessness Targets</i></td>
                     </tr>
                     <tr>
                      <td><p>Targets</p></td>
