--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                  </thead>
                  <tbody>
                     <tr>
-                      <td><i>Responding to Homelessness Targets</i></td>
-                      <td><i>Preventing Homelessness Targets</i></td>
+                      <td><p><i>Responding to Homelessness Targets</i></p></td>
+                      <td><p><i>Preventing Homelessness Targets</i></p></td>
                     </tr>
                     <tr>
                      <td><p>Targets</p></td>
