--- a/testing.html
+++ b/testing.html
@@ -1,15 +1,18 @@
  <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
-<table>
+<div class="clr"></div>
+            <div id="Background">
+              <h1>Background</h1>
+                <center>
+                <table>
                  <thead>
                    <tr>
-                    <th align="center" colspan="2"><h3>Ending Homelessness in Western Australia by 2028</h3></th>
+                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
                    </tr>
                  </thead>
                  <tbody>
                     <tr>
-                      <td><h4><i>Responding to Homelessness Targets</i></h4></td>
-                      <td><h4><i>Preventing Homelessness Targets</i></h4></td>
+                      <td><p><i>Responding to Homelessness Targets</i></p></td>
+                      <td><p><i>Preventing Homelessness Targets</i></p></td>
                     </tr>
                     <tr>
                      <td><p>Targets</p></td>
@@ -17,3 +20,5 @@
                     </tr>
                  </tbody>
                 </table>
+              </center>
+            </div>
