--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <table>
                  <thead>
                    <tr>
-                    <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
+                    <th align="center" colspan="2"><p><b>Ending Homelessness in Western Australia by 2028</b></p></th>
                    </tr>
                  </thead>
                  <tbody>
