--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <table>
                  <thead>
                    <tr>
-                    <th align="center" colspan="2"><p><b>Ending Homelessness in Western Australia by 2028</b></p></th>
+                    <th align="center" colspan="2"><font color="#FFFFFF"><p><b>Ending Homelessness in Western Australia by 2028</b></p></font></th>
                    </tr>
                  </thead>
                  <tbody>
                     <tr>
-                      <td><p><i>Responding to Homelessness Targets</i></p></td>
-                      <td><p><i>Preventing Homelessness Targets</i></p></td>
+                      <td><i>Responding to Homelessness Targets</i></td>
+                      <td><i>Preventing Homelessness Targets</i></td>
                     </tr>
                     <tr>
                      <td><p>Targets</p></td>
