--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                       <td><i>Preventing Homelessness Targets</i></td>
                     </tr>
                     <tr>
-                     <td><p>Targets</p></td>
-                     <td><p>Targets</p></td>
+                     <td>Targets</td>
+                     <td>Targets</td>
                     </tr>
                  </tbody>
                 </table>
