--- a/index.html
+++ b/index.html
@@ -160,8 +160,14 @@
                       <td><i>Preventing Homelessness Targets</i></td>
                     </tr>
                     <tr>
-                     <td>Targets</td>
-                     <td>Targets</td>
+                     <td>
+                       <b>Target 1</b>: Text here<br>
+                       <b>Target 2</b>: Text here<br> 
+                     </td>
+                      <td>
+                        <b>Target 3</b>: Text here<br>
+                        <b>Target 4</b>: Text here
+                      </td>
                     </tr>
                  </tbody>
                 </table>
