--- a/testing.html
+++ b/testing.html
@@ -15,8 +15,8 @@
                       <td><p><i>Preventing Homelessness Targets</i></p></td>
                     </tr>
                     <tr>
-                     <td><p>Targets</p></td>
-                     <td><p>Targets</p></td>
+                     <td><b>Targets</b>: test</td>
+                     <td><b>Targets</b>: test</td>
                     </tr>
                  </tbody>
                 </table>
