--- a/testing.html
+++ b/testing.html
@@ -1,4 +1,4 @@
-<link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="stylesheet.css" rel="stylesheet" type="text/css">
 
 <table>
                  <thead>
