--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div id="Background">
               <h1>Background</h1>
                 <center>
-                <table>
+                <table class="styled-table">
                  <thead>
                    <tr>
                     <th align="center" colspan="2"><b>Ending Homelessness in Western Australia by 2028</b></th>
