--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <script src="scripts/custom.js"></script>
 <!-- Load topcontrol js -->
 <script src="scripts/scrolltopcontrol.js"></script>
+<!-- Load NIVO Slider -->
+<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen">
+<link rel="stylesheet" href="css/nivo-theme.css" type="text/css" media="screen">
+<script src="scripts/jquery.nivo.slider.pack.js"></script>
+<script src="scripts/nivo-options.js"></script>
+<!-- Load fancybox -->
+<script src="scripts/jquery.fancybox-1.3.4.pack.js"></script>
+<script src="scripts/jquery.easing-1.3.pack.js"></script>
+<script src="scripts/jquery.mousewheel-3.0.4.pack.js"></script>
+<link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" media="screen">
   </head>
 
   <body>
