--- a/index.html
+++ b/index.html
@@ -143,8 +143,11 @@
   </center>
     <div class="spacer"></div>
           <div class="clr"></div>
+  <p>This report presents the 2022update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard (the Dashboard), which was first released in August 2019, and updated in June 2022.  The Dashboard is an evolving, accessible, and visual platform designed to present and report on outcomes relevant to the key targets of the Western Australian Alliance to End Homelessness (WAAEH). The Dashboard aims to answer the following question: Are we are ‘on track’ to end homelessness in Western Australia?</p>
             <div id="Background">
               <h1>Background</h1>
+              <p>In July 2018, the WAAEH published the Strategy to End Homelessness (the Strategy). The Strategy articulates a 10-year plan to end homelessness in Western Australia, invoking a whole-of-society response. The Strategy comprises nine broad targets across the following areas: reducing and ending homelessness itself; preventing homelessness through addressing ‘structural’ and ‘individual’ drivers of homelessness; improving policy and practice within the service sector; and, improving measurement, accountability, and governance mechanisms. Those targets relating to reducing and preventing homelessness, which have been operationalised and for which data exists, form the backbone of the present version of the Dashboard. </p>
+              <br><br>
                 <center>
                 <table class="styled-table">
                  <thead>
@@ -159,14 +162,24 @@
                     </tr>
                     <tr>
                      <td>
-                       <b>Target 1</b>: Text here<br>
-                       <b>Target 2</b>: Text here<br> 
+                       <b>Target 1</b>: Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping.<br>
+                       <b>Target 2</b>: No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it.<br> 
+                       <b>Target 3</b>: The Western Australian rate of homelessness (including couch surfing and insecure tenure) will have been halved from its 2016 level.<br>
+                       <b>Target 5</b>: The current very large gap between the rate of Aboriginal homelessness and non-Aboriginal homelessness in Western Australia will be eliminated so that the rate of Aboriginal homelessness is no higher than the rate of non-Aboriginal homelessness.<br>
+                       <b>Target 6</b>: Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness.<br>
+                       <b>Target 7</b>: Those experiencing homelessness and those exiting homelessness will be supported to strengthen their economic, social, family and community connections leading to stronger well-being and quality of life outcomes. Employment among those experiencing homelessness will be significantly increased. Over half of those exiting homelessness will be employed within three years of moving into housing. Well-being and quality of life will equal those of the general population in the same timeframe.
                      </td>
                       <td>
-                        <b>Target 3</b>: Text here<br>
-                        <b>Target 4</b>: Text here
+                        <b>Target 4</b>: The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year.<br>
+                        <b>Target 8</b>: A strong, collaborative and adaptive network of services and responses across the community services, health, mental health, justice, and education sectors will exist working collectively to address the underlying causes of homelessness and meeting the needs of those who become homeless.<br>
+                        <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
                       </td>
                     </tr>
+                   <tr>
+                     <td>
+                       <p><b>Source</b>: WAAEH Strategy to End Homelessness (2018)</p>
+                     </td>
+                   </tr>
                  </tbody>
                 </table>
               </center>
@@ -195,6 +208,8 @@
     
             <div id="Target-3-Reducing-the-overall-rate-of-homelessness">
               <h2>Reducing the overall rate of homelessness</h2>
+              <div class='tableauPlaceholder' id='viz1656889646251' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;OverallSHShomelessness&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3_16568893002690&#47;OverallSHShomelessness' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;OverallSHShomelessness&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1656889646251');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>  </div>
+
             </div>
     
             <div id="Target-4">
@@ -257,11 +272,7 @@
             <div id="Target-6-Addressing-the-needs">
               <h2>Addressing the needs of those experiencing homelessness</h2>
             </div> 
-            <p>Normal</p>
-            <p><b>Bold</b></p>
-            <p><i>Italics</i></p>
-            <p><u>Underline</u></p>
-<div class='tableauPlaceholder' id='viz1656889646251' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;OverallSHShomelessness&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3_16568893002690&#47;OverallSHShomelessness' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;OverallSHShomelessness&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1656889646251');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>  </div>
+
 <!--END of content--> 
   </body>
 </html>
