--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                       <td><i>Preventing Homelessness Targets</i></td>
                     </tr>
                     <tr>
-                     <td>
+                     <td width="50%">
                        <b>Target 1</b>: Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping.<br>
                        <b>Target 2</b>: No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it.<br> 
                        <b>Target 3</b>: The Western Australian rate of homelessness (including couch surfing and insecure tenure) will have been halved from its 2016 level.<br>
@@ -169,7 +169,7 @@
                        <b>Target 6</b>: Those experiencing homelessness and those exiting homelessness with physical health, mental health, and alcohol and other drug use dependence needs will have their needs addressed. This will result in a halving of mortality rates among those who have experienced homelessness and a halving in public hospital costs one year on for those exiting homelessness.<br>
                        <b>Target 7</b>: Those experiencing homelessness and those exiting homelessness will be supported to strengthen their economic, social, family and community connections leading to stronger well-being and quality of life outcomes. Employment among those experiencing homelessness will be significantly increased. Over half of those exiting homelessness will be employed within three years of moving into housing. Well-being and quality of life will equal those of the general population in the same timeframe.
                      </td>
-                      <td>
+                      <td width="50%">
                         <b>Target 4</b>: The underlying causes that result in people becoming homeless have been met head-on, resulting in a reduction by more than half in the inflow of people and families into homelessness in any one year.<br>
                         <b>Target 8</b>: A strong, collaborative and adaptive network of services and responses across the community services, health, mental health, justice, and education sectors will exist working collectively to address the underlying causes of homelessness and meeting the needs of those who become homeless.<br>
                         <b>Target 9</b>: Measurement, accountability and governance mechanisms that are robust, transparent and open to external review will be operating, providing an on-going means for assessing progress in meeting the goals of Ending Homelessness in Western Australia in 10 years.<br>
