--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
   </head>
 
   <body>
-    <style>
-  html, body { height: 100% }
-    </style>
 <!--This is the START of the menu-->
     <div id="menu-wrapper">
      <div id="main-menu">
@@ -211,7 +208,8 @@
     
             <div id="Target-3-Reducing-the-overall-rate-of-homelessness">
               <h3>Reducing the overall rate of homelessness</h3>
-<div class='tableauPlaceholder' id='viz1656968326668' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;Customlegend&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3_16568893002690&#47;Customlegend' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;Customlegend&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1656968326668');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>    
+<center><iframe src="https://public.tableau.com/views/Target3_16568893002690/AtriskclientsaccessingSHS?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" width="700" height="1000" frameborder="0"></iframe></center>
+              
             <div id="Target-4">
               <h2>Target 4</h2>
               <blockquote class="blockquote">
