--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
               <blockquote class="blockquote">
                 <h4><i>No individual or family in Western Australia will sleep rough or stay in supported accommodation for longer than five nights before moving into an affordable, safe, decent, permanent home with the support required to sustain it</i></h4>
               </blockquote>
+              <br>
+              <p>Target 2 requires further research before full operationalisation. Both the Australian Institute of Health and Welfare Specialist Homelessness Services Collection (SHSC) data and the Registry Week surveys administered by the AAEH Advance to Zero campaign can produce proxy measures to estimate how well we are approaching this target. The VI-SPDAT questionnaire administered during Registry Week by the AAEH collects information on individual and family housing situations (including sleeping rough or staying in supported accommodation). This could be combined with the responses to the following question, which asks ‘How long has it been since you lived in permanent, stable housing (with a secure lease/tenancy)?’ to determine the number of individuals or families who are sleeping rough or staying in supported accommodation for longer than five nights. 
+Additionally, SHSC records include data on the number of nights clients spend in supported accommodation. While this does not include rough sleeping, the percentage of SHS clients spending more than five nights in supported accommodation could be a useful measure for this target. </p>
             </div>
     
             <div id="Target-3">
