--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
     <br>
     <h2>Dashboard 2022</h2>
+    <img src="csi-uwa logo.png">
   </center>
     <div class="spacer"></div>
           <div class="clr"></div>
