--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             </ol>
      </ul>
     </div>
+     <div id="footer">
+       <div id="footer-logo">
+         Logo
+     </div>
+
+  </div>
+
    </div>
 <!--END of menu-->
 <!--This is the START of the content-->
