--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@
     <h1>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</h1>
     <br>
     <h2>Dashboard 2022</h2>
-    <img src="csi-uwa logo.png" width="600" height="180">
   </center>
     <div class="spacer"></div>
           <div class="clr"></div>
@@ -313,6 +312,10 @@ Additionally, SHSC records include data on the number of nights clients spend in
 <div class='tableauPlaceholder' id='viz1657401799869' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target6&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target6&#47;SHSclientsleavingsupportperiodswithneedsmet' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target6&#47;SHSclientsleavingsupportperiodswithneedsmet&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401799869');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='527px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
               <br><br>
             </div> 
+  <div class='footer'>
+        <img src="csi-uwa logo.png" width="600" height="90" align="right">
+  </div>
+
 
 <!--END of content--> 
   </body>
